@@ -43,6 +43,7 @@ CREATE TABLE users (
   muted char(1),
   permissions varchar(255),
   name varchar(255),
+  lastName varchar(255),
   locale varchar(50),
   tokenVersion int NOT NULL,
   passwordVersion int NOT NULL,
