@@ -41,6 +41,7 @@ create table users (
   muted char(1),
   permissions nvarchar(255),
   name nvarchar(255),
+  lastName nvarchar(255),
   locale nvarchar(50),
   tokenVersion int not null,
   passwordVersion int not null,
