@@ -44,7 +44,8 @@ create table users (
   timezone varchar(50),
   muted char(1),
   permissions varchar(255),
-  name nvarchar(255),
+  name varchar(255),
+  lastName varchar(255),
   locale varchar(50),
   tokenVersion int not null,
   passwordVersion int not null,
