@@ -212,7 +212,7 @@ public class Common {
     }
 
     public static final int getDatabaseSchemaVersion() {
-        return 25;
+        return 26;
     }
 
     /**
