@@ -62,6 +62,8 @@ public class User extends AbstractVO<User> implements SetPointSource, HttpSessio
     public final static String SHA1_ALGORITHM = "SHA-1";
 
     @JsonProperty
+    private String lastName;
+    @JsonProperty
     private String username;
     /**
      * This field actually stores a password hash with the hashing algorithm prefixed.
@@ -464,6 +466,14 @@ public class User extends AbstractVO<User> implements SetPointSource, HttpSessio
         this._dtz.reset();
     }
 
+    public String getLastName() {
+        return lastName;
+    }
+
+    public void setLastName(String lastName) {
+        this.lastName = lastName;
+    }
+
     public TimeZone getTimeZoneInstance() {
         return this._tz.get(() -> {
             TimeZone tz = null;
@@ -555,6 +565,9 @@ public class User extends AbstractVO<User> implements SetPointSource, HttpSessio
 
     @Override
     public void validate(ProcessResult response) {
+        
+        if (StringValidation.isLengthGreaterThan(lastName, 255))
+            response.addMessage("lastName", new TranslatableMessage("validate.notLongerThan", 255));
         if (StringUtils.isBlank(username))
             response.addMessage("username", new TranslatableMessage("validate.required"));
         if (StringUtils.isBlank(email))
